--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Students' Calculator</title>
   </head>
   <body>
+    <div>
+      <h2>Today's word:</h2>
+      <p>Failing is another Chance to rise!</p>
+    </div>
+    
     <div class="container">
       <div class="calculator dark">
         <div class="theme-toggler active">
