--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Students' Calculator</title>
   </head>
   <body>
-    <div>
-      <h2>Today's word:</h2>
-      <p>Failing is another Chance to rise!</p>
+    <div id="words">
+      <h2 class="word1">Today's word:</h2>
+      <p class="word2">Failing is another Chance to rise!</p>
     </div>
     
     <div class="container">
