--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="words">
       <h2 class="word1">Today's word:</h2>
-      <p class="word2">Failing is another Chance to rise!</p>
+      <p class="word2">Na Who Snooze Go Lose! <br> All Man Sabi</p>
     </div>
     
     <div class="container">
@@ -58,3 +58,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
